--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.error.include-binding-errors=always
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
